--- a/app/src/main/res/layout/list_view_people.xml
+++ b/app/src/main/res/layout/list_view_people.xml
@@ -21,12 +21,6 @@
             android:textStyle="bold"
             android:text="nickname" />
 
-        <Button
-            android:id="@+id/button_details"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="details" />
-
     </LinearLayout>
 
     <LinearLayout
@@ -48,6 +42,7 @@
 
         <Button
             android:id="@+id/button_remove"
+            android:focusable="false"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="remove" />
