--- a/app/src/main/res/layout/list_view_events.xml
+++ b/app/src/main/res/layout/list_view_events.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:padding="16dp" >
 
     <TextView
         android:id="@+id/text_view_rank"
@@ -31,32 +32,13 @@
         android:textSize="24sp"
         android:textStyle="bold" />
 
-    <LinearLayout
-        android:id="@+id/linear_layout_1"
+    <TextView
+        android:id="@+id/text_view_retardation"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="32dp"
         android:layout_below="@id/text_view_date"
-        android:orientation="horizontal" >
-
-        <TextView
-            android:id="@+id/text_view_retardation"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="retardation"
-            android:textColor="@color/colorPrimaryDark"
-            android:textSize="24sp"/>
-
-        <Button
-            android:id="@+id/button_remove"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="remove"
-            android:textColor="@color/colorPrimaryDark" />
-
-    </LinearLayout>
-
-
-
+        android:text="retardation"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="24sp" />
 
 </RelativeLayout>
