--- a/app/src/main/res/layout/dialog_simple_approval.xml
+++ b/app/src/main/res/layout/dialog_simple_approval.xml
@@ -4,10 +4,10 @@
     android:layout_height="match_parent"
     android:padding="16dp" >
 
-    <EditText
-        android:id="@+id/edit_text_change_describtion"
+    <TextView
+        android:id="@+id/text_view_info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="describtion" />
+        android:text="Are you sure?" />
 
 </RelativeLayout>
