--- a/app/src/main/res/layout/list_view_people.xml
+++ b/app/src/main/res/layout/list_view_people.xml
@@ -1,52 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="16dp" >
+    android:layout_height="wrap_content" >
 
-    <LinearLayout
-        android:id="@+id/linear_layout_1"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:orientation="horizontal" >
+        android:padding="16dp" >
 
-        <TextView
-            android:id="@+id/text_view_nickname"
-            android:layout_width="0dp"
-            android:layout_height="32dp"
-            android:layout_weight="1"
-            android:textColor="@color/colorPrimaryDark"
-            android:textStyle="bold"
-            android:text="nickname" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linear_layout_2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/linear_layout_1"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:orientation="horizontal" >
-
-        <TextView
-            android:id="@+id/text_view_points"
-            android:layout_width="0dp"
-            android:layout_height="32dp"
-            android:layout_weight="1"
-            android:textColor="@color/colorPrimaryDark"
-            android:text="points" />
-
-        <Button
-            android:id="@+id/button_remove"
-            android:focusable="false"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/linear_layout_1"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="remove" />
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:orientation="horizontal" >
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/text_view_nickname"
+                android:layout_width="0dp"
+                android:layout_height="32dp"
+                android:layout_weight="1"
+                android:textColor="@color/colorPrimaryDark"
+                android:textStyle="bold"
+                android:text="nickname" />
 
-</RelativeLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/linear_layout_2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/linear_layout_1"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:id="@+id/text_view_points"
+                android:layout_width="0dp"
+                android:layout_height="32dp"
+                android:layout_weight="1"
+                android:textColor="@color/colorPrimaryDark"
+                android:text="points" />
+
+            <Button
+                android:id="@+id/button_remove"
+                android:focusable="false"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="remove" />
+
+        </LinearLayout>
+
+    </RelativeLayout>
+
+</androidx.cardview.widget.CardView>
