--- a/app/src/main/res/layout/card_view_person.xml
+++ b/app/src/main/res/layout/card_view_person.xml
@@ -32,6 +32,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/linear_layout_1"
+            android:weightSum="4"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:orientation="horizontal" >
@@ -40,16 +41,17 @@
                 android:id="@+id/text_view_points"
                 android:layout_width="0dp"
                 android:layout_height="32dp"
-                android:layout_weight="1"
+                android:layout_weight="3"
                 android:textColor="@color/colorPrimaryDark"
                 android:text="points" />
 
             <Button
-                android:id="@+id/button_remove"
-                android:focusable="false"
-                android:layout_width="wrap_content"
+                android:id="@+id/button_delete"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="remove" />
+                android:layout_weight="1"
+                android:focusable="false"
+                android:text="delete" />
 
         </LinearLayout>
 
